--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -24,9 +24,9 @@
             <li>
                 <a href="../pages/services.html">Servicios</a>
                 <ul class="sub-menu">
-                    <li>Remeras</li>
-                    <li>Pantalones</li>
-                    <li>Gorras</li>
+                    <li>Eventos Infantes</li>
+                    <li>Eventos Corporativos</li>
+                    <li>Cattering</li>
                 </ul>
             </li>
             <li>
