--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li>
                 <a href="pages/services.html">Servicios</a>
                 <ul class="sub-menu">
-                    <li>Eventos Infantiles</li>
+                    <li>Eventos Infantes</li>
                     <li>Eventos Corporativos</li>
                     <li>Cattering</li>
                 </ul>
