--- a/pages/services.html
+++ b/pages/services.html
@@ -30,7 +30,7 @@
                 <a href="../pages/gallery.html">Galeria</a>
             </li>
             <li>
-                <a href="../pages//aboutus.html">Nosotros</a>
+                <a href="../pages/aboutus.html">Nosotros</a>
             </li>
             <li>
                 <a href="../pages/reviews.html">Opiniones</a>
@@ -43,15 +43,15 @@
 
     <main class="mainServices">
         <div class="eventKids">
-			<img class="eventImage" src="../img/kids.jpg">
+			<img class="eventImage" src="../img/kids.jpg" alt="Eventos Infantiles">
             <h3 class="eventName">Eventos Infantiles</h3>
 		</div>
 		<div class="eventCorporative">
-			<img class="eventImage" src="../img/boda.jpg">
+			<img class="eventImage" src="../img/boda.jpg" alt="Eventos Corporativos">
             <h3 class="eventName">Eventos Corporativos</h3>
 		</div>
 		<div class="eventCattering">
-			<img class="eventImage" src="../img/catering.jpg">
+			<img class="eventImage" src="../img/catering.jpg" alt="Eventos Cattering">
             <h3 class="eventName">Cattering</h3>
 		</div>
     </main>
