--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link de css bootstrap -->
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- link de css-->
     <link rel="stylesheet" href="css/style.css">
     <title>EVENTOS GALIMBERTI</title>
@@ -16,32 +20,48 @@
             <h1 class="headerLogoTitle">EVENTOS</h1>
         </div>
     </header>
-    <nav class="menu">
-        <ul>
-            <li>
-                Inicio
-            </li>
-            <li>
-                <a href="pages/services.html">Servicios</a>
-                <ul class="sub-menu">
-                    <li>Eventos Infantes</li>
-                    <li>Eventos Corporativos</li>
-                    <li>Cattering</li>
+    
+    <nav class="navbar navbar-expand-md menu">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="">Inicio</a>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Servicios
+                        </a>
+                        <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Eventos Infantes</a></li>
+                            <li><a class="dropdown-item" href="#">Eventos Corporativos</a></li>
+                            <li><a class="dropdown-item" href="#">Cattering</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/gallery.html">Galeria</a></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/aboutus.html">Nosotros</a></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/reviews.html">Opiniones</a></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="pages/contacto.html">Contacto</a></a>
+                    </li>
                 </ul>
-            </li>
-            <li>
-                <a href="pages/gallery.html">Galeria</a>
-            </li>
-            <li>
-                <a href="pages/aboutus.html">Nosotros</a>
-            </li>
-            <li>
-                <a href="pages/reviews.html">Opiniones</a>
-            </li>
-            <li>
-                <a href="pages/contacto.html">Contacto</a>
-            </li>
-        </ul>
+            </div>
+        </div>
     </nav>
 
     <!--contenido principal-->
@@ -68,6 +88,8 @@
             Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
         </h3>
     </footer>
+      <!-- link de js bt-->
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
 </html>
