--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <h1 class="headerLogoTitle">EVENTOS</h1>
         </div>
     </header>
-    
+
     <nav class="navbar navbar-expand-md menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"></a>
@@ -29,7 +29,7 @@
                 aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            
+
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
@@ -37,14 +37,15 @@
                     </li>
 
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" aria-expanded="false"
+                            href="pages/services.html">
                             Servicios
                         </a>
+                        <!--data-bs-toggle="dropdown"-->
                         <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Eventos Infantes</a></li>
-                            <li><a class="dropdown-item" href="#">Eventos Corporativos</a></li>
-                            <li><a class="dropdown-item" href="#">Cattering</a></li>
+                            <li><a class="dropdown-item" href="pages/services.html">Eventos Infantes</a></li>
+                            <li><a class="dropdown-item" href="pages/services.html">Eventos Corporativos</a></li>
+                            <li><a class="dropdown-item" href="pages/services.html">Cattering</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -88,8 +89,10 @@
             Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
         </h3>
     </footer>
-      <!-- link de js bt-->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <!-- link de js bt-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
