--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link de css bootstrap -->
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <!-- link de css-->
     <link rel="stylesheet" href="../css/style.css">
     <title>Opiniones</title>
 </head>
@@ -15,32 +20,48 @@
             <h1 class="headerLogoTitle">EVENTOS</h1>
         </div>
     </header>
-    <nav class="menu">
-        <ul>
-            <li>
-                <a href="../index.html">Inicio</a>
-            </li>
-            <li>
-                <a href="../pages/services.html">Servicios</a>
-                <ul class="sub-menu">
-                    <li>Eventos Infantiles</li>
-                    <li>Eventos Corporativos</li>
-                    <li>Cattering</li>
+    <nav class="navbar navbar-expand-md menu">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                    </li>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="../pages/services.html" id="navbarDropdown"
+                            role="button" aria-expanded="false">
+                            Servicios
+                        </a>
+                        <!---data-bs-toggle="dropdown"-->
+                        <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
+                            <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
+                            <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/gallery.html">Galeria</a></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/aboutus.html">Nosotros</a></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">Opiniones</a></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../pages/contacto.html">Contacto</a></a>
+                    </li>
                 </ul>
-            </li>
-            <li>
-                <a href="../pages/gallery.html">Galeria</a>
-            </li>
-            <li>
-                <a href="../pages/aboutus.html">Nosotros</a>
-            </li>
-            <li>
-                Opiniones
-            </li>
-            <li>
-                <a href="../pages/contacto.html">Contacto</a>
-            </li>
-        </ul>
+            </div>
+        </div>
     </nav>
 
     <!--OPINIONES DE LOS USUARIOS-->
@@ -85,6 +106,10 @@
             Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
         </h3>
     </footer>
+    <!-- link de js bt-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
