--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </div>
     </header>
 
-    <nav class="navbar navbar-expand-md menu">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-sm menu">
+        <div class="container">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -30,9 +30,9 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
+            <div class="navbar-collapse collapse " id="navbarSupportedContent">
+                <ul class="navbar-nav nav-fill w-100 ">
+                    <li class="nav-item ">
                         <a class="nav-link active" aria-current="page" href="">Inicio</a>
                     </li>
 
