--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -20,7 +20,7 @@
             <h1 class="headerLogoTitle">EVENTOS</h1>
         </div>
     </header>
-    <nav class="navbar navbar-expand-md menu">
+    <nav class="navbar navbar-expand-sm menu">
         <div class="container-fluid">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -30,7 +30,7 @@
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav nav-fill w-100 ">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                     </li>
