--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -76,31 +76,31 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../img/fiesta-1.jpg" class="d-block w-100" alt="...">
+                <img src="../img/fiesta-1.jpg" class="d-block w-100" alt="Evento Kids 2020-Mayo">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
+                  <h5>Kids</h5>
+                  <p>Evento Kids 2020-Mayo</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/fiesta-2.jpeg" class="d-block w-100" alt="...">
+                <img src="../img/fiesta-2.jpeg" class="d-block w-100" alt="Evento Corporativo 2021-Julio">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
+                  <h5>Corporative</h5>
+                  <p>Evento Corporativo 2021-Julio</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/fiesta-3.jpg" class="d-block w-100" alt="...">
+                <img src="../img/fiesta-3.jpg" class="d-block w-100" alt="Evento Cattering 2021-Octubre">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Cattering</h5>
+                  <p>Evento Cattering 2021-Octubre</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../img/fiesta-4.webp" class="d-block w-100" alt="...">
+                <img src="../img/fiesta-4.webp" class="d-block w-100" alt="Evento Kids 2022-Marzo">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
+                  <h5>Kids</h5>
+                  <p>Evento Kids 2022-Marzo</p>
                 </div>
               </div>
             </div>
