--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -73,25 +73,28 @@
                 <legend>Envio tus datos</legend>
                 <div class="mb-3">
                     <label for="Nombre">Nombre y Apellido <br>
-                        <input class="form-control form-control-lg" type="text" name="nombre" placeholder="Nombre y apellido">
+                        <input class="form-control form-control-lg" type="text" name="nombre"
+                            placeholder="Nombre y apellido">
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email:</label>
-                    <input class="form-control form-control-lg" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <input class="form-control form-control-lg" type="email" class="form-control"
+                        id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
                 <div class="mb-3">
                     <label for="Telefono">
                         Telefono de contacto:<br>
                     </label>
-                    <input class="form-control form-control-lg" type="text" name="nombre" placeholder="Ingresa un teléfono">
+                    <input class="form-control form-control-lg" type="text" name="nombre"
+                        placeholder="Ingresa un teléfono">
                 </div>
                 <!--etiqueta de bloque-->
                 <div class="mb-3">
                     <label for="Consulta"> Consulta:<br>
-                        <textarea  class="form-control form-control-lg" placeholder="Ingrese su consulta"></textarea>
+                        <textarea class="form-control form-control-lg" placeholder="Ingrese su consulta"></textarea>
                     </label> <br>
                 </div>
-                
+
                 <div class="mb-3">
                     <br>
                     <input type="submit" value="Enviar">
