--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -2,144 +2,146 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- link de css bootstrap -->
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!-- link de css-->
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Galeria</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- link de css bootstrap -->
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+  <!-- link de css-->
+  <link rel="stylesheet" href="../css/style.css">
+  <title>Galeria</title>
 </head>
 
 <body>
-    <header class="headerInit">
-        <div class="headerLogo">
-            <h1 class="headerLogoTitle">EVENTOS</h1>
-        </div>
+  <header class="headerInit">
+    <div class="headerLogo">
+      <h1 class="headerLogoTitle">EVENTOS</h1>
+    </div>
 
-    </header>
-    <nav class="navbar navbar-expand-sm menu">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+  </header>
+  <nav class="navbar navbar-expand-sm menu">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-fill w-100 ">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav nav-fill w-100 ">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+          </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="../pages/services.html" id="navbarDropdown"
-                            role="button" aria-expanded="false">
-                            Servicios
-                        </a>
-                        <!---data-bs-toggle="dropdown"-->
-                        <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
-                            <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
-                            <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Galeria</a></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/aboutus.html">Nosotros</a></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/reviews.html">Opiniones</a></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/contacto.html">Contacto</a></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="../pages/services.html" id="navbarDropdown" role="button"
+              aria-expanded="false">
+              Servicios
+            </a>
+            <!---data-bs-toggle="dropdown"-->
+            <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
+              <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
+              <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Galeria</a></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/aboutus.html">Nosotros</a></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/reviews.html">Opiniones</a></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../pages/contacto.html">Contacto</a></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
 
-    <main >
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Evento Mayo 2021"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label=""></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label=""></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label=""></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="../img/fiesta-1.jpg" class="d-block w-100" alt="Evento Kids 2020-Mayo">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Kids</h5>
-                  <p>Evento Kids 2020-Mayo</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../img/fiesta-2.jpeg" class="d-block w-100" alt="Evento Corporativo 2021-Julio">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Corporative</h5>
-                  <p>Evento Corporativo 2021-Julio</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../img/fiesta-3.jpg" class="d-block w-100" alt="Evento Cattering 2021-Octubre">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Cattering</h5>
-                  <p>Evento Cattering 2021-Octubre</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="../img/fiesta-4.webp" class="d-block w-100" alt="Evento Kids 2022-Marzo">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Kids</h5>
-                  <p>Evento Kids 2022-Marzo</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
+  <main>
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+          aria-current="true" aria-label="Evento Mayo 2021"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label=""></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label=""></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label=""></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="../img/fiesta-1.jpg" class="d-block w-100" alt="Evento Kids 2020-Mayo">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Kids</h5>
+            <p>Evento Kids 2020-Mayo</p>
           </div>
-    </main>
-    <main class="mainGallery">
-        <img class="item1" src="../img/fiesta-1.jpg" alt="">
-        <img class="item2" src="../img/fiesta-2.jpeg" alt="">
-        <img class="item3" src="../img/fiesta-3.jpg" alt="">
-        <img class="item4" src="../img/fiesta-4.webp" alt="">
-    </main>
-
-
-
-    <!-- #region footer-->
-    <footer class="footerInit">
-        <div class="footerIcons">
-            <img src="../img/ico-email.svg" alt="" width="24" height="24">
-            <img src="../img/ico-facebook.svg" alt="" width="24" height="24">
-            <img src="../img/ico-instagram.svg" alt="" width="24" height="24">
-            <img src="../img/ico-whatsapp.svg" alt="" width="24" height="24">
-            <img src="../img/ico-twitter.svg" alt="" width="24" height="24">
         </div>
-        <h3>
-            Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
-        </h3>
-    </footer>
-    <!-- link de js bt-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
+        <div class="carousel-item">
+          <img src="../img/fiesta-2.jpeg" class="d-block w-100" alt="Evento Corporativo 2021-Julio">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Corporative</h5>
+            <p>Evento Corporativo 2021-Julio</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/fiesta-3.jpg" class="d-block w-100" alt="Evento Cattering 2021-Octubre">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Cattering</h5>
+            <p>Evento Cattering 2021-Octubre</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="../img/fiesta-4.webp" class="d-block w-100" alt="Evento Kids 2022-Marzo">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Kids</h5>
+            <p>Evento Kids 2022-Marzo</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </main>
+  <main class="mainGallery">
+    <img class="item1" src="../img/fiesta-1.jpg" alt="">
+    <img class="item2" src="../img/fiesta-2.jpeg" alt="">
+    <img class="item3" src="../img/fiesta-3.jpg" alt="">
+    <img class="item4" src="../img/fiesta-4.webp" alt="">
+  </main>
+
+
+
+  <!-- #region footer-->
+  <footer class="footerInit">
+    <div class="footerIcons">
+      <img src="../img/ico-email.svg" alt="" width="24" height="24">
+      <img src="../img/ico-facebook.svg" alt="" width="24" height="24">
+      <img src="../img/ico-instagram.svg" alt="" width="24" height="24">
+      <img src="../img/ico-whatsapp.svg" alt="" width="24" height="24">
+      <img src="../img/ico-twitter.svg" alt="" width="24" height="24">
+    </div>
+    <h3>
+      Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
+    </h3>
+  </footer>
+  <!-- link de js bt-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
