--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
 
     <nav class="navbar navbar-expand-sm menu">
-        <div class="container">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -31,7 +31,7 @@
             </button>
 
             <div class="navbar-collapse collapse " id="navbarSupportedContent">
-                <ul class="navbar-nav nav-fill w-100 ">
+                <ul class="navbar-nav nav-fill w-100">
                     <li class="nav-item ">
                         <a class="nav-link active" aria-current="page" href="">Inicio</a>
                     </li>
