--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <div class="containerPrincipal">
     <header class="headerInit">
         <div class="headerLogo">
             <h1 class="headerLogoTitle">EVENTOS</h1>
@@ -106,10 +107,12 @@
                 Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
             </h3>
         </footer>
+    </div>
         <!-- link de js bt-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
             crossorigin="anonymous"></script>
+        
 </body>
 
 </html>
