--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <div class="containerPrincipal">
     <!--Menu-->
     <header class="headerInit">
         <div class="headerLogo">
@@ -119,10 +120,12 @@
             Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
         </h3>
     </footer>
+</div>
     <!-- link de js bt-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
         crossorigin="anonymous"></script>
+
 </body>
 
 </html>
