--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -66,11 +66,11 @@
     </nav>
 
 
-    <main class="mainGallery">
+    <main class="mainGalleryCarousel">
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-            aria-current="true" aria-label="Evento Mayo 2021"></button>
+            aria-current="true" aria-label=""></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label=""></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label=""></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label=""></button>
@@ -117,14 +117,14 @@
         </button>
       </div>
     </main>
-    <!-----
-  <main class="mainGallery">
-    <img class="item1" src="../img/fiesta-1.jpg" alt="">
-    <img class="item2" src="../img/fiesta-2.jpeg" alt="">
-    <img class="item3" src="../img/fiesta-3.jpg" alt="">
-    <img class="item4" src="../img/fiesta-4.webp" alt="">
-  </main>
--->
+
+    <main class="mainGallery">
+      <div class="item1" ><img src="../img/fiesta-1.jpg" alt="Evento Kids 2020-Mayo"></div>
+      <div class="item2"><img  src="../img/fiesta-2.jpeg" alt="Evento Corporativo 2021-Julio"></div>
+      <div class="item3"><img  src="../img/fiesta-3.jpg" alt="Evento Cattering 2021-Octubre"></div>
+      <div class="item4"><img  src="../img/fiesta-4.webp" alt="Evento Kids 2022-Marzo"></div>
+    </main>
+
 
 
     <!-- #region footer-->
