--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -17,85 +17,89 @@
 
 <body>
     <div class="containerPrincipal">
-    <header class="headerInit">
-        <div class="headerLogo">
-            <h1 class="headerLogoTitle">EVENTOS</h1>
-        </div>
-    </header>
-
-    <!--Menu-->
-    <nav class="navbar navbar-expand-sm menu">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-fill w-100 ">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="../pages/services.html" id="navbarDropdown"
-                            role="button" aria-expanded="false">
-                            Servicios
-                        </a>
-                        <!---data-bs-toggle="dropdown"-->
-                        <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
-                            <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
-                            <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/gallery.html">Galeria</a></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Nosotros</a></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/reviews.html">Opiniones</a></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/contacto.html">Contacto</a></a>
-                    </li>
-                </ul>
+        <header class="headerInit">
+            <div class="headerLogo">
+                <h1 class="headerLogoTitle">EVENTOS</h1>
             </div>
-        </div>
-    </nav>
-    <main class="mainAboutUs">
-        <div class="mainABoutUsImage">
-            <img class="mainAboutUsImage" src="../img/boda.jpg" alt="" width="382" height="244">
-        </div>
-        <h2 class="mainAboutUsH2">Conoce nuestra empresa</h2>
-        <p class="mainAboutUsP">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae nostrum nihil dolores soluta, quas, aliquam
-            exercitationem asperiores, consequatur obcaecati veniam vitae! Praesentium iste similique, blanditiis fugiat
-            vitae assumenda molestiae libero.
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae nostrum nihil dolores soluta, quas, aliquam
-            exercitationem asperiores, consequatur obcaecati veniam vitae! Praesentium iste similique, blanditiis fugiat
-            vitae assumenda molestiae libero.
-        </p>
-    </main>
+        </header>
 
-    <!-- #region footer-->
-    <footer class="footerInit">
-        <div class="footerIcons">
-            <img src="../img/ico-email.svg" alt="" width="24" height="24">
-            <img src="../img/ico-facebook.svg" alt="" width="24" height="24">
-            <img src="../img/ico-instagram.svg" alt="" width="24" height="24">
-            <img src="../img/ico-whatsapp.svg" alt="" width="24" height="24">
-            <img src="../img/ico-twitter.svg" alt="" width="24" height="24">
-        </div>
-        <h3>
-            Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
-        </h3>
-    </footer>
-</div>
+        <!--Menu-->
+        <nav class="navbar navbar-expand-sm menu">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav nav-fill w-100 ">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="../pages/services.html" id="navbarDropdown"
+                                role="button" aria-expanded="false">
+                                Servicios
+                            </a>
+                            <!---data-bs-toggle="dropdown"-->
+                            <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/gallery.html">Galeria</a></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Nosotros</a></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/reviews.html">Opiniones</a></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <main class="mainAboutUs">
+            <div class="mainABoutUsImage">
+                <img class="mainAboutUsImage" src="../img/boda.jpg" alt="" width="382" height="244">
+            </div>
+            <h2 class="mainAboutUsH2">Conoce nuestra empresa</h2>
+            <p class="mainAboutUsP">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae nostrum nihil dolores soluta, quas,
+                aliquam
+                exercitationem asperiores, consequatur obcaecati veniam vitae! Praesentium iste similique, blanditiis
+                fugiat
+                vitae assumenda molestiae libero.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae nostrum nihil dolores soluta, quas,
+                aliquam
+                exercitationem asperiores, consequatur obcaecati veniam vitae! Praesentium iste similique, blanditiis
+                fugiat
+                vitae assumenda molestiae libero.
+            </p>
+        </main>
+
+        <!-- #region footer-->
+        <footer class="footerInit">
+            <div class="footerIcons">
+                <img src="../img/ico-email.svg" alt="" width="24" height="24">
+                <img src="../img/ico-facebook.svg" alt="" width="24" height="24">
+                <img src="../img/ico-instagram.svg" alt="" width="24" height="24">
+                <img src="../img/ico-whatsapp.svg" alt="" width="24" height="24">
+                <img src="../img/ico-twitter.svg" alt="" width="24" height="24">
+            </div>
+            <h3>
+                Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
+            </h3>
+        </footer>
+    </div>
     <!-- link de js bt-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
