--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -16,83 +16,81 @@
 
 <body>
     <div class="containerPrincipal">
-    <header class="headerInit">
-        <div class="headerLogo">
-            <h1 class="headerLogoTitle">EVENTOS</h1>
-        </div>
-    </header>
-    <nav class="navbar navbar-expand-sm menu">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-fill w-100 ">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="../pages/services.html" id="navbarDropdown"
-                            role="button" aria-expanded="false">
-                            Servicios
-                        </a>
-                        <!---data-bs-toggle="dropdown"-->
-                        <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
-                            <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
-                            <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/gallery.html">Galeria</a></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/aboutus.html">Nosotros</a></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Opiniones</a></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../pages/contacto.html">Contacto</a></a>
-                    </li>
-                </ul>
+        <header class="headerInit">
+            <div class="headerLogo">
+                <h1 class="headerLogoTitle">EVENTOS</h1>
             </div>
-        </div>
-    </nav>
+        </header>
+        <nav class="navbar navbar-expand-sm menu">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#"></a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
 
-    <!--OPINIONES DE LOS USUARIOS-->
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav nav-fill w-100 ">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                        </li>
 
-    <section class="mainReviews">
-        <h2>¿Que opinan de nuestros servicios?</h2>
-        <ul>
-            <li>Usuario 1</li>
-            <p>
-                "Muy buen servicio, les encanto a los chicos"
-            </p>
-            <li>Usuario 2</li>
-            <p>
-                "Muy buen servicio, les encanto a los chicos"
-            </p>
-            <li>Usuario 3</li>
-            <p>
-                "Buen servicio mas que conforme"
-            </p>
-            <li>Usuario 4</li>
-            <p>
-                "Dentro de todo bien, podrian agregar mayor variedad de platos"
-            </p>
-            <li>Usuario 5</li>
-            <p>
-                "Satisfecho"
-            </p>
-        </ul>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="../pages/services.html" id="navbarDropdown"
+                                role="button" aria-expanded="false">
+                                Servicios
+                            </a>
+                            <!---data-bs-toggle="dropdown"-->
+                            <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/gallery.html">Galeria</a></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/aboutus.html">Nosotros</a></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Opiniones</a></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../pages/contacto.html">Contacto</a></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <!--OPINIONES DE LOS USUARIOS-->
+        <main class="mainReviews">
+                <h2>¿Que opinan de nuestros servicios?</h2>
+                <ul>
+                    <li>Usuario 1</li>
+                    <p>
+                        "Muy buen servicio, les encanto a los chicos"
+                    </p>
+                    <li>Usuario 2</li>
+                    <p>
+                        "Muy buen servicio, les encanto a los chicos"
+                    </p>
+                    <li>Usuario 3</li>
+                    <p>
+                        "Buen servicio mas que conforme"
+                    </p>
+                    <li>Usuario 4</li>
+                    <p>
+                        "Dentro de todo bien, podrian agregar mayor variedad de platos"
+                    </p>
+                    <li>Usuario 5</li>
+                    <p>
+                        "Satisfecho"
+                    </p>
+                </ul>
         </main>
-
 
         <!-- #region footer-->
         <footer class="footerInit">
@@ -108,11 +106,11 @@
             </h3>
         </footer>
     </div>
-        <!-- link de js bt-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-            crossorigin="anonymous"></script>
-        
+    <!-- link de js bt-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
