--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -119,10 +119,10 @@
     </main>
 
     <main class="mainGallery">
-      <div class="item1" ><img src="../img/fiesta-1.jpg" alt="Evento Kids 2020-Mayo"></div>
-      <div class="item2"><img  src="../img/fiesta-2.jpeg" alt="Evento Corporativo 2021-Julio"></div>
-      <div class="item3"><img  src="../img/fiesta-3.jpg" alt="Evento Cattering 2021-Octubre"></div>
-      <div class="item4"><img  src="../img/fiesta-4.webp" alt="Evento Kids 2022-Marzo"></div>
+      <img class="item1" src="../img/fiesta-1.jpg" alt="Evento Kids 2020-Mayo">
+      <img class="item2" src="../img/fiesta-2.jpeg" alt="Evento Corporativo 2021-Julio">
+      <img class="item3" src="../img/fiesta-3.jpg" alt="Evento Cattering 2021-Octubre">
+      <img class="item4" src="../img/fiesta-4.webp" alt="Evento Kids 2022-Marzo">
     </main>
 
 
