--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -69,7 +69,7 @@
         </nav>
         <main class="mainAboutUs">
             <div class="mainABoutUsImage">
-                <img class="mainAboutUsImage" src="../img/boda.jpg" alt="Imagen de Boda" >
+                <img class="mainAboutUsImage" src="../img/boda.jpg" alt="" width="382" height="244">
             </div>
             <h2 class="mainAboutUsH2">Conoce nuestra empresa</h2>
             <p class="mainAboutUsP">
