--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="navbar-collapse collapse " id="navbarSupportedContent">
                     <ul class="navbar-nav nav-fill w-100">
                         <li class="nav-item ">
-                            <a class="nav-link active" aria-current="page" href="">Inicio</a>
+                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                         </li>
     
                         <li class="nav-item dropdown">
