agregado de scss

--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- link de css-->
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Opiniones</title>
 </head>
 
@@ -67,29 +67,29 @@
 
         <!--OPINIONES DE LOS USUARIOS-->
         <main class="mainReviews">
-                <h2>¿Que opinan de nuestros servicios?</h2>
-                <ul>
-                    <li>Usuario 1</li>
-                    <p>
-                        "Muy buen servicio, les encanto a los chicos"
-                    </p>
-                    <li>Usuario 2</li>
-                    <p>
-                        "Muy buen servicio, les encanto a los chicos"
-                    </p>
-                    <li>Usuario 3</li>
-                    <p>
-                        "Buen servicio mas que conforme"
-                    </p>
-                    <li>Usuario 4</li>
-                    <p>
-                        "Dentro de todo bien, podrian agregar mayor variedad de platos"
-                    </p>
-                    <li>Usuario 5</li>
-                    <p>
-                        "Satisfecho"
-                    </p>
-                </ul>
+            <h2>¿Que opinan de nuestros servicios?</h2>
+            <ul>
+                <li>Usuario 1</li>
+                <p>
+                    "Muy buen servicio, les encanto a los chicos"
+                </p>
+                <li>Usuario 2</li>
+                <p>
+                    "Muy buen servicio, les encanto a los chicos"
+                </p>
+                <li>Usuario 3</li>
+                <p>
+                    "Buen servicio mas que conforme"
+                </p>
+                <li>Usuario 4</li>
+                <p>
+                    "Dentro de todo bien, podrian agregar mayor variedad de platos"
+                </p>
+                <li>Usuario 5</li>
+                <p>
+                    "Satisfecho"
+                </p>
+            </ul>
         </main>
 
         <!-- #region footer-->
