agregado de scss

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -77,28 +77,28 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../img/fiesta-1.jpg" class="d-block w-100" alt="Evento Kids 2020-Mayo">
+            <img src="../img/fiesta1.jpg" class="d-block w-100" alt="Evento Kids 2020-Mayo">
             <div class="carousel-caption d-none d-md-block">
               <h5>Kids</h5>
               <p>Evento Kids 2020-Mayo</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../img/fiesta-2.jpeg" class="d-block w-100" alt="Evento Corporativo 2021-Julio">
+            <img src="../img/fiesta2.jpeg" class="d-block w-100" alt="Evento Corporativo 2021-Julio">
             <div class="carousel-caption d-none d-md-block">
               <h5>Corporative</h5>
               <p>Evento Corporativo 2021-Julio</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../img/fiesta-3.jpg" class="d-block w-100" alt="Evento Cattering 2021-Octubre">
+            <img src="../img/fiesta3.jpg" class="d-block w-100" alt="Evento Cattering 2021-Octubre">
             <div class="carousel-caption d-none d-md-block">
               <h5>Cattering</h5>
               <p>Evento Cattering 2021-Octubre</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../img/fiesta-4.webp" class="d-block w-100" alt="Evento Kids 2022-Marzo">
+            <img src="../img/fiesta4.webp" class="d-block w-100" alt="Evento Kids 2022-Marzo">
             <div class="carousel-caption d-none d-md-block">
               <h5>Kids</h5>
               <p>Evento Kids 2022-Marzo</p>
@@ -119,10 +119,10 @@
     </main>
 
     <main class="mainGallery">
-      <img class="item1" src="../img/fiesta-1.jpg" alt="Evento Kids 2020-Mayo">
-      <img class="item2" src="../img/fiesta-2.jpeg" alt="Evento Corporativo 2021-Julio">
-      <img class="item3" src="../img/fiesta-3.jpg" alt="Evento Cattering 2021-Octubre">
-      <img class="item4" src="../img/fiesta-4.webp" alt="Evento Kids 2022-Marzo">
+      <img class="item1" src="../img/fiesta1.jpg" alt="Evento Kids 2020-Mayo">
+      <img class="item2" src="../img/fiesta2.jpeg" alt="Evento Corporativo 2021-Julio">
+      <img class="item3" src="../img/fiesta3.jpg" alt="Evento Cattering 2021-Octubre">
+      <img class="item4" src="../img/fiesta4.webp" alt="Evento Kids 2022-Marzo">
     </main>
 
 
@@ -130,16 +130,16 @@
     <!-- #region footer-->
     <footer class="footerInit">
       <div class="footerIcons">
-        <img src="../img/ico-email.svg" alt="" width="24" height="24">
-        <img src="../img/ico-facebook.svg" alt="" width="24" height="24">
-        <img src="../img/ico-instagram.svg" alt="" width="24" height="24">
-        <img src="../img/ico-whatsapp.svg" alt="" width="24" height="24">
-        <img src="../img/ico-twitter.svg" alt="" width="24" height="24">
+          <img src="../img/icoEmail.svg" alt="" width="24" height="24">
+          <img src="../img/icoFacebook.svg" alt="" width="24" height="24">
+          <img src="../img/icoInstagram.svg" alt="" width="24" height="24">
+          <img src="../img/icoWhatsapp.svg" alt="" width="24" height="24">
+          <img src="../img/icoTwitter.svg" alt="" width="24" height="24">
       </div>
       <h3>
-        Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
+          Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
       </h3>
-    </footer>
+  </footer>
   </div>
   <!-- link de js bt-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
