--- a/pages/services.html
+++ b/pages/services.html
@@ -85,11 +85,11 @@
         <!-- #region footer-->
         <footer class="footerInit">
             <div class="footerIcons">
-                <img src="../img/ico-email.svg" alt="" width="24" height="24">
-                <img src="../img/ico-facebook.svg" alt="" width="24" height="24">
-                <img src="../img/ico-instagram.svg" alt="" width="24" height="24">
-                <img src="../img/ico-whatsapp.svg" alt="" width="24" height="24">
-                <img src="../img/ico-twitter.svg" alt="" width="24" height="24">
+                <img src="../img/icoEmail.svg" alt="" width="24" height="24">
+                <img src="../img/icoFacebook.svg" alt="" width="24" height="24">
+                <img src="../img/icoInstagram.svg" alt="" width="24" height="24">
+                <img src="../img/icoWhatsapp.svg" alt="" width="24" height="24">
+                <img src="../img/icoTwitter.svg" alt="" width="24" height="24">
             </div>
             <h3>
                 Todos los derechos reservados <br>Pagina diseñada por Galimberti Flavio
