--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 <body>
     <div class="containerPrincipal">
         <header class="headerInit">
-            <div class="headerLogo">
-                <h1 class="headerLogoTitle">EVENTOS</h1>
-            </div>
+            <a href="/">
+                <div class="headerLogo">
+                    <h1 class="headerLogoTitle">EVENTOS</h1>
+                </div>
+            </a>
         </header>
 
         <nav class="navbar navbar-expand-sm menu">
