--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -18,9 +18,11 @@
 <body>
     <div class="containerPrincipal">
         <header class="headerInit">
-            <div class="headerLogo">
-                <h1 class="headerLogoTitle">EVENTOS</h1>
-            </div>
+            <a href="/">
+                <div class="headerLogo">
+                    <h1 class="headerLogoTitle">EVENTOS</h1>
+                </div>
+            </a>
         </header>
 
         <!--Menu-->
