--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -17,10 +17,13 @@
     <div class="containerPrincipal">
         <!--Menu-->
         <header class="headerInit">
-            <div class="headerLogo">
-                <h1 class="headerLogoTitle">EVENTOS</h1>
-            </div>
+            <a href="/">
+                <div class="headerLogo">
+                    <h1 class="headerLogoTitle">EVENTOS</h1>
+                </div>
+            </a>
         </header>
+        
         <nav class="navbar navbar-expand-sm menu">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"></a>
