--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -17,11 +17,13 @@
 <body>
   <div class="containerPrincipal">
     <header class="headerInit">
-      <div class="headerLogo">
-        <h1 class="headerLogoTitle">EVENTOS</h1>
-      </div>
-
+      <a href="/">
+        <div class="headerLogo">
+            <h1 class="headerLogoTitle">EVENTOS</h1>
+        </div>
+    </a>
     </header>
+    
     <nav class="navbar navbar-expand-sm menu">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
