Entrega SEO y SAS

--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
             <div class="mainInitVideo">
                 <iframe class="mainInitVideo" src="https://www.youtube.com/embed/3ztNWv3OpuQ"
                     title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;
+                     picture-in-picture"
+                    ></iframe>
             </div>
             <div class="mainInitP">
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam repellat minus error accusamus
