--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -27,7 +27,7 @@
 
         <!--Menu-->
         <nav class="navbar navbar-expand-sm menu">
-            <div class="container-fluid">
+            <div class="container">
                 <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
