--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -25,7 +25,7 @@
     </header>
 
     <nav class="navbar navbar-expand-sm menu">
-      <div class="container-fluid">
+      <div class="container">
         <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
