Entrega SEO y SAS

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Para más información o solicitar un presupuesto puede complentar el siguiente formulario o escribirnos por nuestras redes sociales">
+    <meta name="keywords" content="Formulario contacto correo datos personales">
     <!-- link de css bootstrap -->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
