--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Empresa dedicada a la organizacion de fiestas, desde ya varios años y nuestros clientes siempre han quedado conformes">
+    <meta name="keywords" content="2021 Eventos">
     <!-- link de css bootstrap -->
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
