--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Galeria con algunos de los eventos que hemos realizado">
+  <meta name="keywords" content="Imagenes Eventos Cattering Infantiles">
   <!-- link de css bootstrap -->
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
