mejorando la pagina

--- a/pages/services.html
+++ b/pages/services.html
@@ -71,19 +71,24 @@
 
 
         <main class="mainServices">
-            <div class="eventKids">
+            <div class="eventCard">
                 <img class="eventImage" src="../img/kids.jpg" alt="Eventos Infantiles">
                 <h3 class="eventName">Eventos Infantiles</h3>
+                <p>Lorem ipsum dolor </p>
             </div>
-            <div class="eventCorporative">
+            <div class="eventCard">
                 <img class="eventImage" src="../img/boda.jpg" alt="Eventos Corporativos">
                 <h3 class="eventName">Eventos Corporativos</h3>
+                <p>Lorem ipsum dolor </p>
             </div>
-            <div class="eventCattering">
+            <div class="eventCard">
                 <img class="eventImage" src="../img/catering.jpg" alt="Eventos Cattering">
                 <h3 class="eventName">Cattering</h3>
+                <p>Lorem ipsum dolor </p>
             </div>
         </main>
+
+
 
 
         <!-- #region footer-->
