modificacion SEO y SAS

--- a/pages/services.html
+++ b/pages/services.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Contamos con varios servicios eventos de chicos, servicios de Cattering, eventos ejecutivos">
+    <meta name="description" content="Contamos con varios servicios eventos de chicos, servicios de Cattering, eventos ejecutivos">
     <meta name="keywords" content="Eventos chicos cattering ejecutivos">
     <!-- link de css bootstrap -->
     <!-- CSS only -->
@@ -72,37 +71,17 @@
 
 
         <main class="mainServices">
-            <div class="eventCard eventKids">
-                <div class="eventImage"></div>
-                <div class="eventImage--hover"></div>
-                <div clase="eventInfo">
-                    <h3 class="eventName">Eventos Infantiles</h3>
-                    <p>Lorem ipsum dolor </p>
-                </div>
+            <div class="eventKids">
+                <img class="eventImage" src="../img/kids.jpg" alt="Eventos Infantiles">
+                <h3 class="eventName">Eventos Infantiles</h3>
             </div>
-            <div class="eventCard eventCorporative ">
-                <div class="eventImage"></div>
-                <div class="eventImage--hover"></div>
-                <div clase="eventInfo">
-                    <h3 class="eventName">Eventos Corporativos</h3>
-                    <p>Lorem ipsum dolor </p>
-                </div>
+            <div class="eventCorporative">
+                <img class="eventImage" src="../img/boda.jpg" alt="Eventos Corporativos">
+                <h3 class="eventName">Eventos Corporativos</h3>
             </div>
-            <div class="eventCard eventCattering">
-                <div class="eventImage"></div>
-                <div class="eventImage--hover"></div>
-                <div clase="eventInfo">
-                    <h3 class="eventName">Cattering</h3>
-                    <p>Lorem ipsum dolor </p>
-                </div>
-            </div>
-            <div class="eventCard eventCattering">
-                <div class="eventImage"></div>
-                <div class="eventImage--hover"></div>
-                <div clase="eventInfo">
-                    <h3 class="eventName">Cattering</h3>
-                    <p>Lorem ipsum dolor </p>
-                </div>
+            <div class="eventCattering">
+                <img class="eventImage" src="../img/catering.jpg" alt="Eventos Cattering">
+                <h3 class="eventName">Cattering</h3>
             </div>
         </main>
 
