mejora pagina servicios

--- a/pages/services.html
+++ b/pages/services.html
@@ -51,6 +51,7 @@
                                 <li><a class="dropdown-item" href="#">Eventos Infantes</a></li>
                                 <li><a class="dropdown-item" href="#">Eventos Corporativos</a></li>
                                 <li><a class="dropdown-item" href="#">Cattering</a></li>
+                                <li><a class="dropdown-item" href="#">Casamientos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -96,7 +97,7 @@
                     <p>Lorem ipsum dolor </p>
                 </div>
             </div>
-            <div class="eventCard eventCattering">
+            <div class="eventCard eventBodas">
                 <div class="eventImage"></div>
                 <div class="eventImage--hover"></div>
                 <div clase="eventInfo">
