--- a/pages/gallery copy.html
+++ b/pages/gallery copy.html
@@ -50,8 +50,7 @@
                 <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
                 <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
                 <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
-                <li><a class="dropdown-item" href="../pages/services.html">Casamientos</a></li>
-            </ul>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Galeria</a></a>
@@ -124,23 +123,10 @@
     </main>
 
     <main class="mainGallery">
-      <div class="item1">
-        <img class="itemImage" src="../img/fiesta1.jpg" alt="Evento Kids 2020-Mayo">
-        <p class="itemInfo">Evento Kids 2020 Mayo</p>
-      </div>
-      <div class="item2">
-        <img class="itemImage" src="../img/fiesta2.jpeg" alt="Evento Corporativo 2021-Julio">
-        <p class="itemInfo">Evento Corporativo 2021 Julio</p>
-      </div>
-      <div class="item3">
-        <img class="itemImage" src="../img/fiesta3.jpg" alt="Evento Cattering 2021-Octubre">
-        <p class="itemInfo">Evento Cattering 2021 Octubre</p>
-      </div>
-      <div class="item4">
-        <img class="itemImage" src="../img/fiesta4.webp" alt="Evento Kids 2022-Marzo">
-        <p class="itemInfo">Evento Kids 2022 Marzo</p>
-      </div>
-      
+      <img class="item1" src="../img/fiesta1.jpg" alt="Evento Kids 2020-Mayo">
+      <img class="item2" src="../img/fiesta2.jpeg" alt="Evento Corporativo 2021-Julio">
+      <img class="item3" src="../img/fiesta3.jpg" alt="Evento Cattering 2021-Octubre">
+      <img class="item4" src="../img/fiesta4.webp" alt="Evento Kids 2022-Marzo">
     </main>
 
 
