--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -47,9 +47,10 @@
                             </a>
                             <!---data-bs-toggle="dropdown"-->
                             <ul class="dropdown-menu sub-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
-                                <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
+                                <li><a class="dropdown-item" href="#">Eventos Infantes</a></li>
+                                <li><a class="dropdown-item" href="#">Eventos Corporativos</a></li>
+                                <li><a class="dropdown-item" href="#">Cattering</a></li>
+                                <li><a class="dropdown-item" href="#">Casamientos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
