--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,6 +51,7 @@
                                 <li><a class="dropdown-item" href="../pages/services.html">Eventos Infantes</a></li>
                                 <li><a class="dropdown-item" href="../pages/services.html">Eventos Corporativos</a></li>
                                 <li><a class="dropdown-item" href="../pages/services.html">Cattering</a></li>
+                                <li><a class="dropdown-item" href="../pages/services.html">Casamientos</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
