correccion link redes

--- a/pages/services.html
+++ b/pages/services.html
@@ -119,7 +119,7 @@
         <!-- #region footer-->
         <footer class="footerInit">
             <div class="footerIcons">
-                <a href="pages/contacto.html" target="_blank">
+                <a href="../pages/contacto.html" target="_blank">
                     <img src="../img/icoEmail.svg" alt="Correo" width="24" height="24">
                 </a>
                 <a href="https://es-la.facebook.com/" target="_blank">
