--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -140,6 +140,22 @@
         <img class="itemImage" src="../img/fiesta4.webp" alt="Evento Kids 2022-Marzo">
         <p class="itemInfo">Evento Kids 2022 Marzo</p>
       </div>
+      <div class="item5">
+        <img class="itemImage" src="../img/fiesta1.jpg" alt="Evento Kids 2020-Mayo">
+        <p class="itemInfo">Evento Kids 2020 Mayo</p>
+      </div>
+      <div class="item6">
+        <img class="itemImage" src="../img/fiesta2.jpeg" alt="Evento Corporativo 2021-Julio">
+        <p class="itemInfo">Evento Corporativo 2021 Julio</p>
+      </div>
+      <div class="item7">
+        <img class="itemImage" src="../img/fiesta3.jpg" alt="Evento Cattering 2021-Octubre">
+        <p class="itemInfo">Evento Cattering 2021 Octubre</p>
+      </div>
+      <div class="item8">
+        <img class="itemImage" src="../img/fiesta4.webp" alt="Evento Kids 2022-Marzo">
+        <p class="itemInfo">Evento Kids 2022 Marzo</p>
+      </div>
       
     </main>
 
@@ -148,7 +164,7 @@
     <!-- #region footer-->
     <footer class="footerInit">
       <div class="footerIcons">
-        <a href="pages/contacto.html" target="_blank">
+        <a href="../pages/contacto.html" target="_blank">
           <img src="../img/icoEmail.svg" alt="Correo" width="24" height="24">
         </a>
         <a href="https://es-la.facebook.com/" target="_blank">
