--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Empresa dedicada a la organizacion de fiestas, desde ya varios años y nuestros clientes siempre han quedado conformes">
+    <meta name="description"
+        content="Empresa dedicada a la organizacion de fiestas, desde ya varios años y nuestros clientes siempre han quedado conformes">
     <meta name="keywords" content="2021 Eventos">
     <!-- link de css bootstrap -->
     <!-- CSS only -->
@@ -88,6 +89,9 @@
                 exercitationem asperiores, consequatur obcaecati veniam vitae! Praesentium iste similique, blanditiis
                 fugiat
                 vitae assumenda molestiae libero.
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo qui odio ut ipsum officia numquam odit
+                laborum dolor nostrum, fugiat cumque non, debitis fugit facilis eligendi corporis ducimus exercitationem
+                asperiores.
             </p>
         </main>
 
